RESOLVED FIXED163555
CTTE some of the BackForwardList member functions
https://bugs.webkit.org/show_bug.cgi?id=163555
Summary CTTE some of the BackForwardList member functions
Anders Carlsson
Reported 2016-10-17 11:30:34 PDT
CTTE some of the BackForwardList member functions
Attachments
Patch (5.11 KB, patch)
2016-10-17 11:32 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2016-10-17 11:32:06 PDT
Darin Adler
Comment 2 2016-10-17 11:36:30 PDT
Comment on attachment 291842 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=291842&action=review > Source/WebKit/mac/History/WebBackForwardList.mm:208 > - return core(self)->containsItem(core(item)); > + if (!item) > + return NO; > + > + return core(self)->containsItem(*core(item)); I like to write it like this: return item && return core(self)->containsItem(*core(item));
Anders Carlsson
Comment 3 2016-10-17 11:38:05 PDT
Chris Dumez
Comment 4 2016-10-17 12:16:18 PDT
I get a build error on iOS: /Volumes/Data/cdumez/WebKit/OpenSource/Source/WebKit/mac/History/WebBackForwardList.mm:170:34: error: no matching function for call to 'kit' [entriesArray addObject:[kit(historyItems[i].ptr()) dictionaryRepresentationIncludingChildren:NO]];
Note You need to log in before you can comment on or make changes to this bug.