CTTE some of the BackForwardList member functions https://bugs.webkit.org/show_bug.cgi?id=163555

Reviewed by Dan Bernstein.

* History/BackForwardList.h:
(BackForwardList::entries):
* History/BackForwardList.mm:
(BackForwardList::removeItem):
(BackForwardList::containsItem):
(BackForwardList::entries): Deleted.
* History/WebBackForwardList.mm:
(-[WebBackForwardList removeItem:]):
(-[WebBackForwardList containsItem:]):
(-[WebBackForwardList description]):

Canonical link: https://commits.webkit.org/181337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207419 268f45cc-cd09-0410-ab3c-d52691b4dbfc